--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,8 +7,6 @@ name: CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,14 +18,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+    - name: Test Install h3ping
+      run: |
+        apt update
+        apt install hping3
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Test h3ping
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        hping3 --help
